# Tarea1Algoritmos

./: pyproject.toml
doc/: Documentación - Tarea programada 1.md
src/: __init__.py  abbpunteros.py  abbvectorheap.py  listaordenadadinamica.py  listaordenadaestatica.py  tablahashabierta.py  triearreglos.py  triepunteros.py
src/tarea1/: __init__.py  abbpunteros.py  abbvectorheap.py  diccionario.py  listaordenadadinamica.py  listaordenadaestatica.py  rendimiento.py  tablahashabierta.py  triearreglos.py  triepunteros.py
