[project]
name = "tarea1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Braulio J. Solano-Rojas", email = "braulio@solsoft.biz" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
]

[project.scripts]
tarea1 = "tarea1:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
